k8s_GKE/ingress/stelace-api-ingress.external.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "stelace-api-external" # Name of the ingress (see kubectl get ingress -A)
  annotations:
    kubernetes.io/ingress.global-static-ip-name: api-syr-market-ip
spec:
  backend:
    serviceName: stelace-api
    servicePort: 4100
  rules:
  - http:
      paths:
        - path: /*  # We will access via the URL https://api.<domain.com>/
          backend:
            serviceName: "stelace-api" # Mapping to the service (see kubectl get services -n nextcloud)
            servicePort: 4100 # Mapping to the port (see kubectl get services -n nextcloud)
---
